# trello-mcp-server

./: .cursorrules  .env example  .gitattributes  CONFIGURATION_GUIDE.md  Dockerfile  MCP_SETUP.md  QUICK_REFERENCE.md  README.md  SETUP_SUMMARY.md  docker-compose.yml  entrypoint.sh  main.py  mcp-config-claude.json  mcp-config-cursor.json  mcp-cursor-wrapper.sh  pyproject.toml  start-mcp-docker.sh  stop-mcp-docker.sh
.github/workflows/: ci.yml  docker-build.yml
scripts/: check_signature.py  validate_dependabot.py  verify_refactor.py
server/: config.py  health_app.py  trello.py
server/tools/: board.py  card.py  checklist.py  list.py
server/utils/: decorators.py  trello_api.py
tests/: conftest.py  test_decorators.py
tests/services/: test_board_service.py  test_card_service.py  test_checklist_service.py  test_list_service.py
tests/tools/: test_board_tool.py  test_card_tool.py  test_checklist_tool.py  test_list_tool.py
